manifests/blue-clusterIP.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "blue-clusterip"
  namespace: "default"
  labels:
    app: planetarium
    role: blue
    job: blue-app # does this need to be planetarium-app
spec:
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "planetarium"
    role: "blue"
  type: "ClusterIP"
