manifests/green-clusterIP.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "green-clusterip"
  namespace: "default"
  labels:
    app: planetarium
    role: green
    job: green-app # does this need to be planetarium-app
spec:
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "planetarium"
    role: "green"
  type: "ClusterIP"
