manifests/planetarium-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planetarium-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: $1
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/affinity-mode: balanced
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /planetarium(.+)
            pathType: Prefix
            backend:
              service:
                name: planetarium-clusterip
                port:
                  number: 80
          - path: /green(.+)
            pathType: Prefix
            backend:
              service:
                name: green-clusterip
                port:
                  number: 80
          - path: /blue(.+)
            pathType: Prefix
            backend:
              service:
                name: blue-clusterip
                port:
                  number: 80
